otus-homework-four/templates/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "something"
spec:
  selector:
    matchLabels:
      app: istio-ingress
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals:
              - "*"
      to:
        - operation:
            methods:
              - "POST"
              - "GET"
              - "PATCH"
              - "DELETE"
            paths:
              - "/"
      when:
        - key: request.auth.claims[]
